--- a/views/paginaInicial.html
+++ b/views/paginaInicial.html
@@ -9,11 +9,11 @@
           </div><br><br><br><br>
           <div>
           <ion-list>
-        <ion-item ng-repeat="recente in desabafos">
-        <ion-option-button ng-click="selecionar(recente)">
-        <a>{{recente.nome}}</a> Reclamou:<br>
-        <b>Título: </b>{{recente.titulo}}
-        </ion-option-button>
+        <ion-item ng-repeat="recente in desabafos" ng-click="selecionar(recente.nome, recente.id, recente.titulo, recente.desabafo)">
+        <table>
+        <a><tr>{{recente.nome}}</a> Reclamou:<br>
+        <b>Título: </b>{{recente.titulo}}</tr>
+        </table>
       </ion-item>
     </ion-list>
     </div>
