--- a/views/selecionado.html
+++ b/views/selecionado.html
@@ -3,8 +3,8 @@
     <ion-header-bar class="bar-dark">
         <h1 class="title">teste</h1>
     </ion-header-bar><br><br><br><br><br>
-          <div ng-repeat="teste in teste">
-          {{teste}}
+          <div>
+          {{$scope.desabafoSelecionado}}
           </div>
   </ion-pane>
 </ion-view>
